--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
