--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@iconify-icon/react": "^2.3.0",
+    "@iconify/react": "^5.2.0",
     "next": "15.1.6",
     "react": "^19.0.0",
+    "react-chrono": "^2.6.1",
     "react-dom": "^19.0.0",
     "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1"
