--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@iconify-icon/react": "^2.3.0",
     "@iconify/react": "^5.2.0",
     "next": "15.1.6",
@@ -16,7 +17,8 @@
     "react-chrono": "^2.6.1",
     "react-dom": "^19.0.0",
     "react-scroll": "^1.9.0",
-    "react-simple-typewriter": "^5.0.1"
+    "react-simple-typewriter": "^5.0.1",
+    "sonner": "^1.7.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
