--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-chrono": "^2.6.1",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1",
     "sonner": "^1.7.3"
