--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@emailjs/browser": "^4.4.1",
     "@iconify-icon/react": "^2.3.0",
     "@iconify/react": "^5.2.0",
@@ -20,6 +21,7 @@
     "react": "^19.0.0",
     "react-chrono": "^2.6.1",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.4.0",
     "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1",
