--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@emailjs/browser": "^4.4.1",
+    "@heroicons/react": "^2.2.0",
     "@iconify-icon/react": "^2.3.0",
     "@iconify/react": "^5.2.0",
     "class-variance-authority": "^0.7.1",
