--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@emailjs/browser": "^4.4.1",
+    "@gsap/react": "^2.1.2",
     "@heroicons/react": "^2.2.0",
     "@iconify-icon/react": "^2.3.0",
     "@iconify/react": "^5.2.0",
+    "@types/gsap": "^1.20.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.6",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
