feat(About): add real-time coding activity widget
- Display current coding status and daily stats
- Show language distribution with time spent
- Auto-refresh every 30s with manual refresh option
- Integrate with Wakatime API for accurate tracking

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1",
     "sonner": "^1.7.3",
+    "swr": "^2.3.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.173.0"
