--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -5,7 +5,7 @@
       "image": "portfolio.jpeg",
       "desc": "A personal portfolio website built with Next.js and TailwindCSS to showcase my projects, qualifications, and skills. Features a modern design with smooth animations and responsive layout.",
       "repo": "https://github.com/osallak/portfolio",
-      "link": "https://portfolio-zbbj.vercel.app/",
+      "link": "https://osallak.tech",
       "technologies": ["Next.js", "TypeScript", "TailwindCSS", "Framer Motion"]
     },
     {
