--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@heroicons/react": "^2.2.0",
     "@iconify-icon/react": "^2.3.0",
     "@iconify/react": "^5.2.0",
-    "@react-three/drei": "^9.121.4",
-    "@react-three/fiber": "^8.17.14",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@types/gsap": "^1.20.2",
     "@types/three": "^0.173.0",
     "asynckit": "^0.4.0",
@@ -34,7 +35,7 @@
     "react-chrono": "^2.6.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1",
     "sonner": "^1.7.3",
