--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@iconify-icon/react": "^2.3.0",
     "@iconify/react": "^5.2.0",
     "@react-spring/three": "^9.7.5",
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "^8.18.0",
-    "@react-three/postprocessing": "^3.0.4",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "@react-three/postprocessing": "^2.16.3",
     "@types/gsap": "^1.20.2",
     "@types/three": "^0.173.0",
     "asynckit": "^0.4.0",
@@ -28,12 +28,13 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.0.6",
     "gsap": "^3.12.7",
+    "lenis": "^1.3.16",
     "lucide-react": "^0.474.0",
     "maath": "^0.10.8",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
-    "react-chrono": "^2.6.1",
+    "react-chrono": "2.6.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.5.0",
